--- a/BMVBackend/Backend/Properties/launchSettings.json
+++ b/BMVBackend/Backend/Properties/launchSettings.json
@@ -13,7 +13,7 @@
       "commandName": "Project",
       "dotnetRunMessages": true,
       "launchBrowser": true,
-      "launchUrl": "api/",
+      "launchUrl": "swagger/index.html",
       "applicationUrl": "http://localhost:5059",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
