Added JWT Token Generation

--- a/BMVBackend/Backend/appsettings.json
+++ b/BMVBackend/Backend/appsettings.json
@@ -6,4 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "JWT": {
+    "secret": "@##$%%11@#$%^&*(&^$#@@HGdss*&%DFGHhFDDDFFF##$%%%",
+    "issuer": "sathvikreddy.com",
+    "audience": "bookmyvenue.com"
+  }
 }
