Filters and logs are added

--- a/BMVBackend/Backend/Backend.csproj
+++ b/BMVBackend/Backend/Backend.csproj
@@ -16,11 +16,13 @@
     </PackageReference>
     <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="8.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="8.0.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Exceptions\" />
+    <Folder Include="Logs\" />
   </ItemGroup>
 
 </Project>
