--- a/BMVBackend/Backend/Backend.csproj
+++ b/BMVBackend/Backend/Backend.csproj
@@ -23,6 +23,7 @@
   <ItemGroup>
     <Folder Include="Exceptions\" />
     <Folder Include="Logs\" />
+    <Folder Include="wwwroot\images\" />
   </ItemGroup>
 
 </Project>
